spec/e2e/if/missing_block.lit
if true # error: [line 1] Syntax error at end of line: I was expecting a block after the if condition.
